Add farewell message

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -104,6 +104,13 @@
 	"entity.search_synonym": "Busca i selecciona el sinònim",
 	"entity.synonym": "Sinònim",
 	"entity.unlink_entity": "Desenllaçar l'entitat. Es crearà una nova entitat no relacionada",
+	"farewell.message_1": "Ens sap greu que te'n vagis {{username}}!",
+	"farewell.message_2": "Ens assegurarem d'eliminar el teu usuari i dades de Nuclia. En nom de l'equip de Nuclia et volem agrair el temps que has dedicat a la nostra plataforma.",
+	"farewell.message_3": "Si creus que podriem fer alguna cosa millor, sisplau",
+	"farewell.message_4": "fes-nos-ho saber",
+	"farewell.message_5": "Ens encantaria saber-ho.",
+	"farewell.message_6": "Gràcies!",
+	"farewell.title": "Fins aviat 👋",
 	"filter.filter_by_name_entities": "Filtrar per Name Entities",
 	"filter.filters_applied": "Filtres aplicats",
 	"filter.search_ontology": "Cerca l'Ontologia",
