--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -104,6 +104,13 @@
 	"entity.search_synonym": "Busca y selecciona el sinónimo",
 	"entity.synonym": "Sinónimo",
 	"entity.unlink_entity": "Desenlazar la entidad. Se creará una nueva entidad no relacionada",
+	"farewell.message_1": "Nos entristece que te vayas {{username}}!",
+	"farewell.message_2": "Nos aseguraremos de eliminar tu usuario y datos de Nuclia. En nombre del equipo de Nuclia te queremos agradecer el tiempo que has dedicado a nuestra plataforma.",
+	"farewell.message_3": "Si crees que podríamos alguna cosa mejora, por favor",
+	"farewell.message_4": "háznoslo saber",
+	"farewell.message_5": "Nos encantaría saberlo.",
+	"farewell.message_6": "Gracias!",
+	"farewell.title": "Hasta pronto 👋",
 	"filter.filter_by_name_entities": "Filtrar por Name Entities",
 	"filter.filters_applied": "Filtros aplicados",
 	"filter.search_ontology": "Busca la Ontología",
