--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -146,12 +146,7 @@
 	"entity.search_synonym": "Search and select the synonym",
 	"entity.synonym": "Synonyms",
 	"entity.unlink_entity": "Unlink entity. A new unrelated entity will be created",
-	"farewell.message_1": "We are sad to see you going {{username}}!",
-	"farewell.message_2": "We will make sure we remove your user and data from Nuclia. In name of Nuclia's team, we thank you for the time you invested in our platform.",
-	"farewell.message_3": "If you think we could have done something better, please",
-	"farewell.message_4": "let us know",
-	"farewell.message_5": "We would love to know it.",
-	"farewell.message_6": "Thank you!",
+	"farewell.message": "<p>We are sad to see you going {{username}}!</p>\n<p>We will make sure we remove your user and data from Nuclia. In name of Nuclia's team, we thank you for the time you invested in our platform.</p>\n<p>If you think we could have done something better, please <a href=\"mailto:{{email}}\">let us know</a>. We would love to know it.</p>\n<p>Thank you!</p>",
 	"farewell.title": "See you soon 👋",
 	"filter.filter_by_name_entities": "Filter by Name Entities",
 	"filter.filters_applied": "Filters applied",
