[sc-2314] Add a delete account action UI (2) (#257)
* Add option to delete user

* Add farewell message

* Remove unused code

* Small fix

* Several fixes

--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -13,9 +13,10 @@
 	"account.db_zone_description": "Elige la zona y el proveedor de procesamiento que quieres utilizar para esta cuenta. De forma predeterminada aparece la zona escogida en el Account",
 	"account.delete.error": "Se ha producido un error al eliminar la cuenta",
 	"account.delete_account": "Eliminar cuenta",
-	"account.delete_account_confirm": "Estas seguro que quieres elimina la cuenta {{account}} y todos los datos que contiene ?",
+	"account.delete_account_confirm": "Quiero eliminar la cuenta {{account}} y todos los datos que contiene.",
 	"account.delete_account_confirm_title": "Eliminar la cuenta?",
 	"account.delete_user": "¿Eliminar usuario?",
+	"account.delete_user_confirm": "Quieres eliminar tu usuario y el acceso a Nuclia ?",
 	"account.delete_user_warning": "¿Seguro que quieres eliminar el usuario {{ username }}?",
 	"account.enhanced_model": "Modelo mejorado",
 	"account.full_name": "Nombre y Apellidos",
@@ -103,6 +104,8 @@
 	"entity.search_synonym": "Busca y selecciona el sinónimo",
 	"entity.synonym": "Sinónimo",
 	"entity.unlink_entity": "Desenlazar la entidad. Se creará una nueva entidad no relacionada",
+	"farewell.message": "<p>Nos entristece que te vayas {{username}}!</p>\n<p>Nos aseguraremos de eliminar tu usuario y datos de Nuclia. En nombre del equipo de Nuclia te queremos agradecer el tiempo que has dedicado a nuestra plataforma.</p>\n<p>Si crees que podríamos haber echo alguna cosa mejor, por favor <a href=\"mailto:{{email}}\">háznoslo saber</a>. Nos encantaría saberlo.</p>\n<p>Gracias!</p>",
+	"farewell.title": "Hasta pronto 👋",
 	"filter.filter_by_name_entities": "Filtrar por Name Entities",
 	"filter.filters_applied": "Filtros aplicados",
 	"filter.search_ontology": "Busca la Ontología",
@@ -159,6 +162,7 @@
 	"generic.name_entity": "Concepto clave",
 	"generic.next": "Siguiente",
 	"generic.next_step": "Siguiente paso",
+	"generic.no": "No",
 	"generic.no_results": "No hemos encontrado resultados :(",
 	"generic.no_results_for": "No se han encontrado resultados para",
 	"generic.nuclia_db": "Nuclia DB",
@@ -201,6 +205,7 @@
 	"generic.users": "Usuarios",
 	"generic.verify": "Verificar",
 	"generic.warning": "¡Aviso!",
+	"generic.yes": "Sí",
 	"generic.zone": "Zona de procesamiento",
 	"generic.zone_and_provider": "Zona y proveedor de procesamiento",
 	"input.placeholder": "Tu búsqueda",
