[sc-2422]: Add ability to create custom entity group
Under 'add-entity-group' feature flag

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -93,12 +93,18 @@
 	"empty.title": "No hem trobat cap resultat :(",
 	"entities.law": "Legal",
 	"entities.quantity": "Quantitats i mesures",
-	"entity.add_description": "Afegeix una descripció més detallada",
+	"entity.add_group": "Afegeix un grup d'entitats",
 	"entity.add_short_description": "Afegeix un títol o línia de text descriptiva",
+	"entity.create_group": "Crear un grup d'entitats",
 	"entity.delete_entity": "Eliminar l’entitat",
+	"entity.entities": "Entitats",
 	"entity.entity": "Entitat",
 	"entity.entity_name": "Nom de la name entity",
 	"entity.entity_search": "Cerca entitat",
+	"entity.form.color": "Color del grup d'entitats",
+	"entity.form.color_placeholder": "Color hexadecimal (#ffdd1a)",
+	"entity.form.entities_help": "Llista d'entitats separades per comes",
+	"entity.form.title": "Títol del grup d'entitats",
 	"entity.new_entity": "Crea una nova entitat",
 	"entity.save_changes": "Guardar l’edició",
 	"entity.search_synonym": "Busca i selecciona el sinònim",
