--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -133,13 +133,19 @@
 	"empty.title": "We didn't find any result :(",
 	"entities.law": "Legal",
 	"entities.quantity": "Quantities and measures",
-	"entity.add_description": "",
+	"entity.add_group": "Add entity group",
 	"entity.add_short_description": "",
+	"entity.create_group": "Create entity group",
 	"entity.delete_entities_warning": "If you delete this insight it will disappear from all resources and search suggestions",
 	"entity.delete_entity": "Delete entity",
+	"entity.entities": "Entities",
 	"entity.entity": "Entity",
 	"entity.entity_name": "Name entity",
 	"entity.entity_search": "Entity search",
+	"entity.form.color": "Entity group color",
+	"entity.form.color_placeholder": "Hexadecimal color (#ffdd1a)",
+	"entity.form.entities_help": "List of entities seperated by comma",
+	"entity.form.title": "Entity group title",
 	"entity.name_entities_management": "Name entities management",
 	"entity.new_entity": "Create a new entity",
 	"entity.save_changes": "Save changes",
