--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -93,12 +93,18 @@
 	"empty.title": "No hemos encontrado ningún resultado :(",
 	"entities.law": "Legal",
 	"entities.quantity": "Cantidades y medidas",
-	"entity.add_description": "Añade una descripción más detallada",
+	"entity.add_group": "Agregar grupo de entidades",
 	"entity.add_short_description": "Añade un título o línea de texto descriptiva",
+	"entity.create_group": "Crear grupo de entidades",
 	"entity.delete_entity": "Eliminar la entidad",
+	"entity.entities": "Entidades",
 	"entity.entity": "Entidad",
 	"entity.entity_name": "Nombre de la name entity",
 	"entity.entity_search": "Busca entidad",
+	"entity.form.color": "Color del grupo de entidades",
+	"entity.form.color_placeholder": "Color hexadecimal (#ffdd1a)",
+	"entity.form.entities_help": "Lista de entidades separadas por coma",
+	"entity.form.title": "Título del grupo de entidades",
 	"entity.new_entity": "Crea una nueva entidad",
 	"entity.save_changes": "Guarda la edición",
 	"entity.search_synonym": "Busca y selecciona el sinónimo",
