Display annotated entities in read mode

--- a/libs/search-widget/public/i18n/ca.json
+++ b/libs/search-widget/public/i18n/ca.json
@@ -1,4 +1,5 @@
 {
+	"entities.annotated": "Anotacions",
 	"entities.annotations": "Anotacions",
 	"entities.date": "Dates",
 	"entities.event": "Esdeveniments",
