--- a/libs/search-widget/public/i18n/en.json
+++ b/libs/search-widget/public/i18n/en.json
@@ -1,4 +1,5 @@
 {
+	"entities.annotated": "Annotated",
 	"entities.annotations": "Annotations",
 	"entities.date": "Date",
 	"entities.event": "Events",
