--- a/libs/search-widget/public/i18n/es.json
+++ b/libs/search-widget/public/i18n/es.json
@@ -1,4 +1,5 @@
 {
+	"entities.annotated": "Anotaciones",
 	"entities.annotations": "Anotaciones",
 	"entities.date": "Fechas",
 	"entities.event": "Eventos",
