--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -224,7 +224,7 @@
 	"login.access_request": "quiere acceder a tu cuenta de Nuclia y poder: ",
 	"login.check_email": "!Revisa tu correo!",
 	"login.continue_with": "Continua con",
-	"login.create_one": "Creala!",
+	"login.create_one": "Créala!",
 	"login.description": "Conoce lo que tu empresa sabe",
 	"login.email": "Correo electrónico",
 	"login.email_already_exists": "Ya existe un usuario registrado con este correo electrónico",
@@ -241,7 +241,7 @@
 	"login.have_account": "¿No tienes una cuenta?",
 	"login.join_expedition": "Únete a la expedición en menos de un minuto",
 	"login.local_user_already_exists": "Ya existe un usuario con este correo electrónico. Para entrar introduce tu contraseña.",
-	"login.login": "Iniciar sessión",
+	"login.login": "Iniciar sesión",
 	"login.password": "Contraseña",
 	"login.privacy_policy": "Política de privacidad",
 	"login.recover": "Recuperar contraseña",
