Search by label when clicking on a label
+ Prevent users to use curly brackets in labels

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -278,7 +278,8 @@
 	"ontology.duplicated_label": "Ja existeix una etiqueta amb el nom \"{{title}}\"",
 	"ontology.excluding_labels": "TODO",
 	"ontology.invalid_name": "El nom de l'etiqueta no és vàlid",
-	"ontology.manage_labels": "Afegeix, anomena i ordena les etiquetes que formen part d’aquesta família d'etiquetes",
+	"ontology.label_naming_constraint": "No s'accepten claudàtors",
+	"ontology.manage_labels": "Creeu i ordeneu les etiquetes que formen part d'aquest conjunt d'etiquetes.",
 	"ontology.ontology_name": "Nom de la família d'etiquetes",
 	"ontology.paragraphs": "Paràgrafs",
 	"ontology.resources": "Recursos",
