--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -328,7 +328,8 @@
 	"ontology.excluding_labels": "Excluding labels",
 	"ontology.invalid_name": "Invalid label name",
 	"ontology.label_classification": "Label classification",
-	"ontology.manage_labels": "Add, name, and sort the labels that are part of this Label Set.",
+	"ontology.label_naming_constraint": "No curly brackets accepted",
+	"ontology.manage_labels": "Create and sort the labels that are part of this Label Set.",
 	"ontology.ontology_name": "Label set name",
 	"ontology.paragraphs": "Paragraphs",
 	"ontology.resources": "Resources",
