--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -278,7 +278,8 @@
 	"ontology.duplicated_label": "Ya existe una etiqueta con el nombre \"{{title}}\"",
 	"ontology.excluding_labels": "TODO",
 	"ontology.invalid_name": "El nombre de la etiqueta no es válido",
-	"ontology.manage_labels": "Añade, nombra y ordena las etiquetas que forman parte de esta família de etiquetas",
+	"ontology.label_naming_constraint": "No se aceptan llaves",
+	"ontology.manage_labels": "Cree y ordene las etiquetas que forman parte de este conjunto de etiquetas.",
 	"ontology.ontology_name": "Nombre de la família de etiquetas",
 	"ontology.paragraphs": "Párrafos",
 	"ontology.resources": "Recursos",
