--- a/libs/search-widget/public/i18n/en.json
+++ b/libs/search-widget/public/i18n/en.json
@@ -21,7 +21,7 @@
 	"entities.title": "Insights",
 	"entities.work_of_art": "Art",
 	"error.search": "Oops! Something is wrong right now!",
-	"error.search-beta": "Fortunately, we told you that it's a beta! 🙃",
+	"error.search-beta": "Luckily we told you it's a beta! 🙃",
 	"form.title-only": "Search in title only",
 	"generic.cancel": "Cancel",
 	"generic.save": "Save",
