--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -605,6 +605,7 @@
 	"stash.widgets.add": "Add search widget",
 	"stash.widgets.add-help": "Name your widget to save and identify it",
 	"stash.widgets.editLabels": "Edit labels",
+	"stash.widgets.entityAnnotation": "Entity annotation",
 	"stash.widgets.invalid-id": "Invalid widget id",
 	"stash.widgets.mode": "Mode",
 	"stash.widgets.mode.button": "Button",
