[sc-2223] Resource list status tooltip

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -449,6 +449,8 @@
 	"resource.showHightligh": "Highlight entities",
 	"resource.source_file": "Origin of the document",
 	"resource.status": "Status",
+	"resource.status_pending": "{count} resources pending to be processed",
+	"resource.status_processing": "Processing in progress",
 	"resource.summary": "Abstract",
 	"resource.summary.help": "Displayed as preview",
 	"resource.text": "Text",
