--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -384,6 +384,7 @@
 	"resource.status": "Estado",
 	"resource.status_pending": "{count} recursos pendientes de procesar",
 	"resource.status_processing": "Procesando en progreso",
+	"resource.status_unknown": "Aún no hay estado disponible para la cola de procesamiento de esta cuenta",
 	"resource.summary": "Resumen",
 	"resource.text": "Texto",
 	"resource.textplaceholder": "Escribe aquí",
