--- a/apps/desktop/src/assets/i18n/en.json
+++ b/apps/desktop/src/assets/i18n/en.json
@@ -1,6 +1,6 @@
 {
 	"generic.cancel": "Cancel",
-	"generic.logout": "Logout",
+	"generic.logout": "Log out",
 	"generic.next": "Next step",
 	"generic.switch_account": "Switch account",
 	"generic.upload": "Upload",
@@ -11,7 +11,7 @@
 	"home.pending": "Pending",
 	"login.button": "Log in",
 	"login.headline": "The easiest and fastest way to ingest data",
-	"login.not-connected": "You're not connected, click on the button to log in the browser",
+	"login.not-connected": "You’re not connected, click the button to log in",
 	"upload.files": "Files to upload",
 	"upload.folder.drop": "Drop folder here",
 	"upload.folder.selected": "Selected folder has {{num}} files",
@@ -19,11 +19,11 @@
 	"upload.review": "You have selected {{num}} files. Review the selected files and begin the process.",
 	"upload.select.all": "Select all",
 	"upload.select.search": "Search",
-	"upload.select.title": "Select the files",
-	"upload.source.help": "Choose the source from which you want to upload all the files",
+	"upload.select.title": "Select files",
+	"upload.source.help": "Choose source for uploads",
 	"upload.source.title": "Source integration",
 	"upload.steps.destination": "Define destination",
 	"upload.steps.files": "Define the files",
 	"upload.steps.sources": "Select the sources",
-	"upload.steps.upload": "Uploading!"
+	"upload.steps.upload": "Uploading"
 }
