[sc-2223] New status column with tooltip on resource list  (#313)
* [sc-2223] Resource list status column icons

* [sc-2223] Resource list status tooltip

* last_delivered_seqid can be null

* Fix import path

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -365,6 +365,7 @@
 	"resource.page.upload_image": "Puja una imatge descriptiva del recurs",
 	"resource.paragraph.help": "Cerca",
 	"resource.paragraph.search": "Cerca per paràgraf",
+	"resource.password": "Contrasenya",
 	"resource.pdf.help": "Cerca",
 	"resource.reference_image": "Imatge de referència",
 	"resource.resource_edit": "Edició del recurs",
@@ -381,6 +382,9 @@
 	"resource.showHightligh": "Ressaltar entitats",
 	"resource.source_file": "Document d'origen",
 	"resource.status": "Estat",
+	"resource.status_pending": "{count} recursos pendents de processar",
+	"resource.status_processing": "Processament en curs",
+	"resource.status_unknown": "Encara no hi ha cap estat disponible per a aquesta cua de processament del compte",
 	"resource.summary": "Resum",
 	"resource.text": "Text",
 	"resource.textplaceholder": "Escriu aquí ",
