--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -365,6 +365,7 @@
 	"resource.page.upload_image": "Sube una imagen descriptiva del recurso",
 	"resource.paragraph.help": "Busca",
 	"resource.paragraph.search": "Busca en párrafo",
+	"resource.password": "Contraseña",
 	"resource.pdf.help": "Busca",
 	"resource.reference_image": "Imagen de referencia",
 	"resource.resource_edit": "Edición del recurso",
@@ -381,6 +382,9 @@
 	"resource.showHightligh": "Resaltar entidades",
 	"resource.source_file": "Documento de origen",
 	"resource.status": "Estado",
+	"resource.status_pending": "{count} recursos pendientes de procesar",
+	"resource.status_processing": "Procesando en progreso",
+	"resource.status_unknown": "Aún no hay estado disponible para la cola de procesamiento de esta cuenta",
 	"resource.summary": "Resumen",
 	"resource.text": "Texto",
 	"resource.textplaceholder": "Escribe aquí",
