[sc-2223] Improving status tooltip rendering in resource list

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -382,7 +382,10 @@
 	"resource.showHightligh": "Ressaltar entitats",
 	"resource.source_file": "Document d'origen",
 	"resource.status": "Estat",
+	"resource.status_error": "Error en processar",
+	"resource.status_loading": "S'està carregant l'estat...",
 	"resource.status_pending": "{count} recursos pendents de processar",
+	"resource.status_processed": "Processament completat",
 	"resource.status_processing": "Processament en curs",
 	"resource.status_unknown": "Encara no hi ha cap estat disponible per a aquesta cua de processament del compte",
 	"resource.summary": "Resum",
