--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -449,7 +449,10 @@
 	"resource.showHightligh": "Highlight entities",
 	"resource.source_file": "Origin of the document",
 	"resource.status": "Status",
+	"resource.status_error": "Error while processing",
+	"resource.status_loading": "Loading status…",
 	"resource.status_pending": "{count} resources pending to be processed",
+	"resource.status_processed": "Processing completed",
 	"resource.status_processing": "Processing in progress",
 	"resource.status_unknown": "No status available for this account processing queue yet",
 	"resource.summary": "Abstract",
