--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -382,7 +382,10 @@
 	"resource.showHightligh": "Resaltar entidades",
 	"resource.source_file": "Documento de origen",
 	"resource.status": "Estado",
+	"resource.status_error": "Error al procesar",
+	"resource.status_loading": "Cargando estado…",
 	"resource.status_pending": "{count} recursos pendientes de procesar",
+	"resource.status_processed": "Procesamiento completado",
 	"resource.status_processing": "Procesando en progreso",
 	"resource.status_unknown": "Aún no hay estado disponible para la cola de procesamiento de esta cuenta",
 	"resource.summary": "Resumen",
