--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -400,6 +400,7 @@
 	"resource.transcript.to": "a",
 	"resource.type": "Tipo",
 	"resource.updated": "Fecha de actualización",
+	"resource.visible_columns_dropdown": "Columnas mostradas",
 	"search.more_results": "mostrar más resultados",
 	"search.sort_by": "Ordenar por",
 	"search.title.answer_results": "¿Está aquí tu respuesta?",
