--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -239,6 +239,7 @@
 	"generic.role": "Role",
 	"generic.save": "Save",
 	"generic.select": "Select",
+	"generic.select_all": "Select all",
 	"generic.select_language": "Select language",
 	"generic.select_tags": "Select the labels",
 	"generic.sequential": "sequential",
@@ -436,7 +437,7 @@
 	"resource.profile": "Profile",
 	"resource.reference_image": "Lead image",
 	"resource.resource_edit": "Editing the resource",
-	"resource.resource_number": "{{num}} resources",
+	"resource.resource_page_number": "{{num}} per page",
 	"resource.search_one": "Search one",
 	"resource.section.materials.files": "Documents",
 	"resource.section.materials.links": "Links",
