--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -192,6 +192,7 @@
 	"generic.role": "Rol",
 	"generic.save": "Guardar",
 	"generic.select": "Selecciona",
+	"generic.select_all": "Seleccionar todo",
 	"generic.select_language": "Selecciona idioma",
 	"generic.select_tags": "Selecciona etiquetas",
 	"generic.sequential": "secuencial",
@@ -369,7 +370,7 @@
 	"resource.pdf.help": "Busca",
 	"resource.reference_image": "Imagen de referencia",
 	"resource.resource_edit": "Edición del recurso",
-	"resource.resource_number": "{{num}} recursos",
+	"resource.resource_page_number": "{{num}} por página",
 	"resource.search_one": "Busca uno/a",
 	"resource.section.materials.files": "Documents",
 	"resource.section.materials.links": "Enlaces",
