[sc-2733] Labels classification column in resource list (#317)
* Label classification column

* Visible columns dropdown

* Display labels with their labelset color

* Update translations for page size

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -239,6 +239,7 @@
 	"generic.role": "Role",
 	"generic.save": "Save",
 	"generic.select": "Select",
+	"generic.select_all": "Select all",
 	"generic.select_language": "Select language",
 	"generic.select_tags": "Select the labels",
 	"generic.sequential": "sequential",
@@ -436,7 +437,7 @@
 	"resource.profile": "Profile",
 	"resource.reference_image": "Lead image",
 	"resource.resource_edit": "Editing the resource",
-	"resource.resource_number": "{{num}} resources",
+	"resource.resource_page_number": "{{num}} per page",
 	"resource.search_one": "Search one",
 	"resource.section.materials.files": "Documents",
 	"resource.section.materials.links": "Links",
@@ -470,6 +471,7 @@
 	"resource.transcript.to": "to",
 	"resource.type": "Type",
 	"resource.updated": "Updated",
+	"resource.visible_columns_dropdown": "Columns displayed",
 	"search.more_results": "show more results",
 	"search.sort_by": "Sort by",
 	"search.title.answer_results": "Did that answer your question?",
