--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -192,6 +192,7 @@
 	"generic.role": "Rol",
 	"generic.save": "Guardar",
 	"generic.select": "Selecciona",
+	"generic.select_all": "Seleccionar tot",
 	"generic.select_language": "Selecciona idioma",
 	"generic.select_tags": "Selecciona etiquetes",
 	"generic.sequential": "seqüencial",
@@ -369,7 +370,7 @@
 	"resource.pdf.help": "Cerca",
 	"resource.reference_image": "Imatge de referència",
 	"resource.resource_edit": "Edició del recurs",
-	"resource.resource_number": "{{num}} recursos",
+	"resource.resource_page_number": "{{num}} per pàgina",
 	"resource.search_one": "Cerca'n un/a",
 	"resource.section.materials.files": "Documents",
 	"resource.section.materials.links": "Enllaços",
@@ -400,6 +401,7 @@
 	"resource.transcript.to": "a",
 	"resource.type": "Tipus",
 	"resource.updated": "Data actualització",
+	"resource.visible_columns_dropdown": "Es mostren les columnes",
 	"search.more_results": "mostrar més resultats",
 	"search.sort_by": "Ordenar per",
 	"search.title.answer_results": "És aquí la teva resposta?",
