Extract label dropdown component and use it in resource list
- Fix multi-level dropdown
- Remove checkbox from resource bulk actions section
- Add label dropdown in resource bulk actions section

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -319,6 +319,7 @@
 	"reset.password_reset": "S'ha restaurat la contrasenya",
 	"reset.title": "Crear contrasenya",
 	"resource.access_source_file": "Accedir al document d'origen",
+	"resource.add_labels": "Afegeix etiquetes",
 	"resource.authorship": "Autoria",
 	"resource.back_to_results": "Tornar als resultats",
 	"resource.classification": "Classificació",
