--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -319,6 +319,7 @@
 	"reset.password_reset": "Se ha restablecido la contraseña",
 	"reset.title": "Crea contraseña",
 	"resource.access_source_file": "Acceder al documento de origen",
+	"resource.add_labels": "Agregar etiquetas",
 	"resource.authorship": "Autoría",
 	"resource.back_to_results": "Volver a los resultados",
 	"resource.classification": "Clasificación",
