--- a/apps/desktop/src/assets/i18n/en.json
+++ b/apps/desktop/src/assets/i18n/en.json
@@ -17,6 +17,8 @@
 	"upload.folder.selected": "Selected folder has {{num}} files",
 	"upload.refresh": "Refresh {{field}}",
 	"upload.review": "You have selected {{num}} files. Review the selected files and begin the process.",
+	"upload.s3.region": "Region",
+	"upload.s3.region_help": "e.g. us-east-1",
 	"upload.select.all": "Select all",
 	"upload.select.search": "Search",
 	"upload.select.title": "Select files",
