--- a/apps/desktop/src/assets/i18n/fr.json
+++ b/apps/desktop/src/assets/i18n/fr.json
@@ -17,6 +17,8 @@
 	"upload.folder.selected": "Le dossier sélectionné a {{num}} fichiers",
 	"upload.refresh": "Rafraîchir {{field}}",
 	"upload.review": "Vous avez sélectionné {{num}} fichiers. Vérifiez la sélection puis lancez le traitement.",
+	"upload.s3.region": "Région",
+	"upload.s3.region_help": "par exemple: eu-west-3",
 	"upload.select.all": "Sélectionner tout",
 	"upload.select.search": "Rechercher",
 	"upload.select.title": "Sélectionnez les fichiers",
